<resources>
    <string name="app_name">Mybarbers´sGold</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Contraseña">**********</string>
    <string name="Registrar">Registrarse</string>
    <string name="hitnt_Nombre">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="password">ingrese una contraseña</string>
    <string name="Correo">digite su correo</string>
    <string name="Iniciar_sesion">Iniciar sesion</string>
    <string name="cuenta">¿Ya cuentas con una cuenta? </string>
    <string name="botonRegistrarse">Registrar </string>
    <string name="Direccion">Direccion</string>
    <string name="telefono">telefono</string>
    <string name="registrar">Registrarse</string>
    <string name="datos">Ingresa los siguientes datos</string>
    <string name="usuario">exemplo@exemplo.com</string>
    <string name="login">iniciar seción</string>
    <string name="email">Email</string>
    <string name="olvido_su_nombre_de_usuario_o_cotrase_a">Olvido su nombre de usuario o cotraseña?</string>
    <string name="correo">Correo</string>
</resources>