<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="37dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="177dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="775dp" />

    <TextView
        android:id="@+id/textRegistrarse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|start|center_vertical"
        android:text="@string/Registrarse"
        android:textAlignment="gravity"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="699dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="175dp" />

    <TextView
        android:id="@+id/textingrese"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/datos"
        android:textColor="@color/secondaryTextColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="621dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="229dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="29dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="43dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:background="#ebebeb"
        android:hint="@string/hitnt_Nombre"
        android:inputType="textPersonName"
        android:textColor="@color/primaryColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline35"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline36"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="559dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="291dp" />

    <TextView
        android:id="@+id/textApellido"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#ebebeb"
        android:gravity="center|start"
        android:hint="@string/Apellidos"
        android:inputType=""
        android:textColor="@color/secondaryTextColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline43"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline44"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="356dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="494dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="419dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="431dp" />

    <EditText
        android:id="@+id/textpasswordregistro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#ebebeb"
        android:gravity="start"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/secondaryTextColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline46"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline45"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textDireccion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#ebebeb"
        android:gravity="start"
        android:hint="@string/Direccion"
        android:inputType="textPostalAddress"
        android:textColor="@color/secondaryTextColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline48"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline47"
        tools:ignore="TextContrastCheck,TextViewEdits,TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="483dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="367dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="545dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="305dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="211dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="637dp" />

    <TextView
        android:id="@+id/textCorreo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#ebebeb"
        android:gravity="start"
        android:hint="@string/Correo"
        android:inputType="textEmailAddress"
        android:textColor="@color/secondaryTextColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline50"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline49"
        tools:ignore="TextContrastCheck,TextViewEdits,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/texttelefono"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#ebebeb"
        android:gravity="center|left"
        android:hint="@string/telefono"
        android:inputType="textPhonetic"
        android:textColor="@color/secondaryTextColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline52"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline51"
        tools:ignore="RtlHardcoded,TextContrastCheck,TextViewEdits,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/registrarse"
        android:textColor="@color/primaryColor"
        android:textSize="14sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline53"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline54"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="815dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="61dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/cuenta"
        android:textColor="@color/secondaryTextColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline56"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline55" />

    <TextView
        android:id="@+id/textIniciarSesion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Iniciar_sesion"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline56"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/guideline55" />

</androidx.constraintlayout.widget.ConstraintLayout>